<resources>
    <string name="app_name">Bee</string>
    <string name="title_activity_enter_address_map">Map</string>
    <string name="usernameReg">Username</string>
    <string name="emailReg">Email</string>
    <string name="saveBt">SAVE</string>
    <string name="btRider">TO RIDE</string>
    <string name="btDriver">TO DRIVE</string>
    <string name="phoneNum">Phone</string>
    <string name="passwordReg">Password</string>
    <string name="sign_upReg">Sign up</string>
    <string name="sign_inLog_rider">Sign in as Rider</string>
    <string name="sign_inLog_driver">Sign in as Driver</string>
    <string name="signin_redirect">Already a member? Sign in!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="signup_redirect">Don\'t have an account? Register here!</string>
    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerClose</string>
    <string name="contactEmail">Contact Email</string>
    <string name="bee">Bee</string>
    <string name="password_hint"> *at least 6 characters with capital letter</string>
    <string name="FirstName"> First Name</string>
    <string name="LastName"> Last Name</string>
    <string name="hello_world"> Last Name</string>
    <string name="rating_hint">Want to do better? Click here!</string>
    <string name="driver_hint">Ready to offer your first ride? Click here!</string>

</resources>
