<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.example.bee.LoginActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="510dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"

        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="-6dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="40dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/ivLogLogo"
                android:layout_width="match_parent"
                android:layout_height="160dp"

                android:layout_marginTop="18dp"
                android:layout_marginBottom="55dp"
                android:scaleType="fitCenter"
                android:src="@drawable/logo" />


            <AutoCompleteTextView
                android:id="@+id/atvUsernameReg"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableStart="@drawable/icon_person"
                android:drawableLeft="@drawable/icon_person"
                android:drawablePadding="10dp"
                android:hint="@string/usernameReg"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:textSize="15sp" />


            <AutoCompleteTextView
                android:id="@+id/atvPasswordLog"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableStart="@drawable/icon_password"
                android:drawableLeft="@drawable/icon_password"
                android:drawablePadding="10dp"
                android:hint="Password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:textSize="15sp" />


            <Button
                android:id="@+id/btnSignInRider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/button"
                android:text="@string/sign_inLog_rider"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnSignInDriver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/button"
                android:text="@string/sign_inLog_driver"
                android:textColor="@color/white" />


            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/signup_redirect"
                android:textColor="@color/gray" />


        </LinearLayout>


    </ScrollView>

</RelativeLayout>