<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fcfcfa"
    tools:context="com.example.bee.RegistrationActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"

        android:layout_marginBottom="113dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/ivRegLogo"
                android:layout_width="match_parent"
                android:layout_height="160dp"

                android:layout_marginTop="18dp"
                android:layout_marginBottom="55dp"
                android:contentDescription="TODO"
                android:scaleType="fitCenter"
                android:src="@drawable/logo" />



            <TextView
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phoneNum"
                    android:textSize="16sp"
                    android:textColor="@color/gray"
                    android:inputType="phone" />


                <EditText
                    android:id="@+id/inputPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/gray"
                    android:layout_marginStart="8dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contactEmail"
                    android:textColor="@color/gray"
                    android:textSize="16sp"
                    />


                <EditText
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/gray"
                    android:layout_marginStart="8dp"
                    />
            </LinearLayout>


            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/saveBt"
                android:textColor="#FFFFFF" />




        </LinearLayout>


    </ScrollView>

</RelativeLayout>
